--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 ]
 dependencies = [
     "dependency-injector>=4.48.1",
+    "docling>=2.42.0",
     "fastapi[standard]>=0.116.1",
     "langdetect>=1.0.9",
     "llama-index-core>=0.12.34.post1",
