Add HMAC secret to environment configuration and implement usage tracking service
- Added HMAC_SECRET to .env.example and AppConfig for secure user identification.
- Introduced UsageTrackingService for logging usage events with pseudonymized user IDs.
- Updated convert and translation routes to log events using the new service.
- Adjusted line length in pyproject.toml for consistency.
- Removed debugging print statements in TranslationService.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ CLIENT_URL=http://localhost:${CLIENT_PORT}
 OPENAI_API_BASE_URL=http://localhost:${LLM_API_PORT}/v1
 OPENAI_API_KEY='none'
 LLM_MODEL='ISTA-DASLab/gemma-3-27b-it-GPTQ-4b-128g'
+HMAC_SECRET='your_hmac_secret_here' # generate with openssl rand 32 | base64
