--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ OPENAI_API_BASE_URL=http://localhost:${LLM_API_PORT}/v1
 OPENAI_API_KEY='none'
 LLM_MODEL='ISTA-DASLab/gemma-3-27b-it-GPTQ-4b-128g'
 HMAC_SECRET='your_hmac_secret_here' # generate with openssl rand 32 | base64
+DOCLING_URL='http://localhost:8004/v1'
