--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
 	},
 	"python.testing.pytestArgs": ["tests"],
 	"python.testing.pytestEnabled": true,
+	"python.analysis.exclude": ["**/.venv/**", "**/node_modules/**"],
 	"python.testing.unittestEnabled": false,
 	"github.copilot.enable": {
 		".env": false
