Enhance error handling and validation in document conversion service; add custom exception handling and response models

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -14,9 +14,6 @@
         "**/.venv/**"
     ],
     "typeCheckingMode": "strict",
-    "useLibraryCodeForTypes": false,
-    "autoImportCompletions": true,
-    "indexing": false,
-    "autoSearchPaths": false,
-    "extraPaths": []
+    "reportGeneralTypeIssues": false,
+    "reportUnknownParameterType": false
 }
