Implement structural updates and optimizations across multiple modules

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,19 +1,19 @@
 {
-    "include": [
-        "bs_translator_backend",
-        "tests"
-    ],
-    "exclude": [
-        ".venv",
-        "**/__pycache__",
-        "**/.pytest_cache",
-        "**/node_modules"
-    ],
-    "ignore": [
-        ".venv/**",
-        "**/.venv/**"
-    ],
-    "typeCheckingMode": "strict",
-    "reportGeneralTypeIssues": false,
-    "reportUnknownParameterType": false
+  "exclude": [
+    ".venv",
+    "**/__pycache__",
+    "**/.pytest_cache",
+    "**/node_modules"
+  ],
+  "ignore": [
+    ".venv/**",
+    "**/.venv/**"
+  ],
+  "include": [
+    "bs_translator_backend",
+    "tests"
+  ],
+  "reportGeneralTypeIssues": false,
+  "reportUnknownParameterType": false,
+  "typeCheckingMode": "strict"
 }
