--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,17 +19,16 @@ classifiers = [
 ]
 dependencies = [
     "dependency-injector>=4.48.1",
-    "docling>=2.42.0",
     "fastapi[standard]>=0.116.1",
+    "httpx>=0.28.1",
     "langdetect>=1.0.9",
     "llama-index-core>=0.12.34.post1",
     "llama-index-llms-openai>=0.3.38",
     "llama-index-llms-openai-like>=0.3.4",
     "llama-index-readers-file>=0.4.7",
     "openai>=1.97.0",
-    "python-docx>=1.2.0",
     "python-dotenv>=1.0.1",
-    "returns[compatible-mypy]>=0.25.0",
+    "returns[compatible-mypy]>=0.26.0",
     "structlog>=25.1.0",
     "version-pioneer>=0.0.13",
 ]
@@ -41,13 +40,15 @@ Documentation = "https://DCC-BS.github.io/bs-translator-backend/"
 
 [dependency-groups]
 dev = [
+    "pillow>=10.0.0",
     "coverage>=7.6.12",
     "pytest>=8.3.4",
     "pre-commit>=2.20.0",
     "tox-uv>=1.11.3",
     "basedpyright>=1.27.1",
     "ruff>=0.9.2",
-    "rich>=13.9.4"
+    "rich>=13.9.4",
+    "pytest-asyncio>=1.1.0",
 ]
 
 [build-system]
@@ -62,10 +63,6 @@ versionscript = "src/bs_translator_backend/_version.py"  # Where to "read" the V
 versionfile-sdist = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for sdist.
 versionfile-wheel = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for wheel.
 
-[tool.basedpyright]
-include = [
-    "src"
-]
 exclude = [
     "**/__pycache__",
     "**/.venv",
