--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ OPENAI_API_KEY='none'
 LLM_MODEL='ISTA-DASLab/gemma-3-27b-it-GPTQ-4b-128g'
 HMAC_SECRET='your_hmac_secret_here' # generate with openssl rand 32 | base64
 DOCLING_URL='http://localhost:8004/v1'
+WHISPER_URL='http://localhost:50001/v1'
+
+HF_AUTH_TOKEN=your_hugging_face_token_here
