--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ CLIENT_URL=http://localhost:${CLIENT_PORT}
 OPENAI_API_BASE_URL=http://localhost:${LLM_API_PORT}/v1
 OPENAI_API_KEY='none'
 LLM_MODEL='ISTA-DASLab/gemma-3-27b-it-GPTQ-4b-128g'
-HMAC_SECRET='/3jMEb47XbFHkCBM0/EBwRtAyDiKTAjSVEIHV+y85Jg=' # generate with openssl rand 32 | base64
+HMAC_SECRET='your_hmac_secret' # generate with openssl rand 32 | base64
 DOCLING_URL='http://localhost:8004/v1'
 WHISPER_URL='http://localhost:50001/v1'
