--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,10 @@ dev = [
     "pytest>=8.3.4",
     "pre-commit>=2.20.0",
     "tox-uv>=1.11.3",
-    "basedpyright>=1.27.1",
     "ruff>=0.9.2",
     "rich>=13.9.4",
     "pytest-asyncio>=1.1.0",
+    "pyrefly>=0.43.1",
 ]
 
 [build-system]
