--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,43 +8,11 @@ on:
     types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
-  quality:
+  backend-ci:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
-        uses: actions/checkout@v6
-
-      - uses: actions/cache@v4
+      - uses: DCC-BS/ci-workflows/.github/workflows/python-backend-ci.yml@v1
         with:
-          path: ~/.cache/pre-commit
-          key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
-
-      - name: Set up the environment
-        uses: ./.github/actions/setup-python-env
-
-      - name: Run checks
-        run: make check
-
-  tests-and-type-check:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "3.10", "3.11", "3.12", "3.13"]
-      fail-fast: false
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Check out
-        uses: actions/checkout@v6
-
-      - name: Set up the environment
-        uses: ./.github/actions/setup-python-env
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      # - name: Run tests
-      #   run: uv run pytest tests
-
-      # - name: Check typing
-      #   run: uv run basedpyright
+          python_versions: '["3.10","3.11","3.12","3.13"]'
+          quality_python_version: "3.12"
+          check_command: "make check"
