--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,9 @@ dependencies = [
     "langdetect>=1.0.9",
     "llama-index-core>=0.12.34.post1",
     "llama-index-llms-openai>=0.3.38",
-    "llama-index-llms-openai-like>=0.3.4",
-    "llama-index-readers-file>=0.4.7",
     "openai>=1.97.0",
     "python-dotenv>=1.0.1",
-    "returns[compatible-mypy]>=0.26.0",
+    "returns>=0.26.0",
     "structlog>=25.1.0",
     "version-pioneer>=0.0.13",
 ]
