--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,13 @@ on:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    branches:
+      - main
 
 jobs:
   backend-ci:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: DCC-BS/ci-workflows/.github/workflows/python-backend-ci.yml@v1
-        with:
-          python_versions: '["3.10","3.11","3.12","3.13"]'
-          quality_python_version: "3.12"
-          check_command: "make check"
+    uses: DCC-BS/ci-workflows/.github/workflows/python-backend-ci.yml@v1
+    with:
+      python_versions: '["3.10","3.11","3.12","3.13"]'
+      quality_python_version: "3.12"
+      check_command: "make check"
