--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,27 +45,12 @@ dev = [
     "ruff>=0.9.2",
     "rich>=13.9.4",
     "pytest-asyncio>=1.1.0",
-    "pyrefly>=0.43.1",
+    "pyrefly>=0.45.2",
 ]
 
 [build-system]
-requires = ["hatchling","version-pioneer>=0.0.13"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.version-pioneer]
-versionscript = "src/bs_translator_backend/_version.py"  # Where to "read" the Version-Pioneer script (to execute `get_version_dict()`).
-versionfile-sdist = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for sdist.
-versionfile-wheel = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for wheel.
-
-exclude = [
-    "**/__pycache__",
-    "**/.venv",
-    "**/.*"
-]
-defineConstant = { DEBUG = true }
-pythonVersion = "3.12"
-stubPath = "src/bs_translator_backend/stubs"
-reportExplicitAny = false
 
 
 [tool.pytest.ini_options]
