--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ LLM_MODEL='ISTA-DASLab/gemma-3-27b-it-GPTQ-4b-128g'
 HMAC_SECRET='your_hmac_secret' # generate with openssl rand 32 | base64
 DOCLING_URL='http://localhost:8004/v1'
 WHISPER_URL='http://localhost:50001/v1'
+OPTIMIZER_API_KEY=
+OPTIMIZER_MODEL=
+OPTIMIZER_API_BASE_URL=
