--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,13 @@ classifiers = [
 ]
 dependencies = [
     "dependency-injector>=4.48.1",
+    "dspy>=3.0.4",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
     "langdetect>=1.0.9",
-    "llama-index-core>=0.12.34.post1",
-    "llama-index-llms-openai>=0.3.38",
+    "datasets>=3.1.0",
     "openai>=1.97.0",
+    "jiwer>=4.0.0",
     "python-dotenv>=1.0.1",
     "returns>=0.26.0",
     "structlog>=25.1.0",
@@ -45,8 +46,13 @@ dev = [
     "ruff>=0.9.2",
     "rich>=13.9.4",
     "pytest-asyncio>=1.1.0",
-    "pyrefly>=0.43.1",
 ]
+
+
+[project.scripts]
+optimize-translation = "bs_translator_backend.scripts.optimize_llm:main"
+prepare-dataset = "bs_translator_backend.scripts.prepare_dataset:main"
+
 
 [build-system]
 requires = ["hatchling","version-pioneer>=0.0.13"]
@@ -57,15 +63,18 @@ versionscript = "src/bs_translator_backend/_version.py"  # Where to "read" the V
 versionfile-sdist = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for sdist.
 versionfile-wheel = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for wheel.
 
+[tool.pyright]
 exclude = [
     "**/__pycache__",
     "**/.venv",
     "**/.*"
 ]
 defineConstant = { DEBUG = true }
-pythonVersion = "3.12"
+pythonVersion = "3.13"
 stubPath = "src/bs_translator_backend/stubs"
 reportExplicitAny = false
+venvPath = "."
+venv = ".venv"
 
 
 [tool.pytest.ini_options]
