Update .gitignore to exclude CSV files from data directory
- Added rules to ignore all CSV files in the `src/bs_translator_backend/data/` directory and any files starting with `eval_`. This change helps maintain a cleaner repository by preventing unnecessary files from being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 docs/source
-
+src/bs_translator_backend/data/*.csv
+eval_*.csv
 # From https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
