--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "returns>=0.26.0",
     "structlog>=25.1.0",
+    "backend-common[fastapi]",
 ]
 
 [project.urls]
@@ -179,3 +180,6 @@ allow_untyped_globals = false
 # Package configuration
 namespace_packages = true
 explicit_package_bases = true
+
+[tool.uv.sources]
+backend-common = { git = "https://github.com/DCC-BS/backend-common" }
