--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,13 +56,8 @@ prepare-dataset = "bs_translator_backend.scripts.prepare_dataset:main"
 
 
 [build-system]
-requires = ["hatchling","version-pioneer>=0.0.13"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.version-pioneer]
-versionscript = "src/bs_translator_backend/_version.py"  # Where to "read" the Version-Pioneer script (to execute `get_version_dict()`).
-versionfile-sdist = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for sdist.
-versionfile-wheel = "src/bs_translator_backend/_version.py"  # Where to "write" the version dict for wheel.
 
 [tool.pyright]
 exclude = [
