Enhance FastAPI application with health check endpoints and lifecycle… (#24)
* Enhance FastAPI application with health check endpoints and lifecycle management

- Added health check endpoints for liveness, readiness, and startup status.
- Implemented application lifecycle management using async context manager.
- Set project version to 0.0.1 and removed version-pioneer dependency from the project.

* Enhance health check endpoints with detailed documentation and request context

- Updated liveness, readiness, and startup probe endpoints to include request context.
- Added docstrings to each health check function for better clarity on their purpose and return values.

* Add readiness checks for LLM and transcription service

- Implemented `is_ready` method in both `TranscriptionService` and `QwenVllm` classes to verify service availability.
- Updated the FastAPI application to call these readiness checks during the health check process, enhancing overall service reliability.

* Refine health check implementation for LLM and transcription service

- Updated the health check logic in the FastAPI application to include detailed readiness checks for both LLM and transcription services.
- Modified the `is_ready` methods in `TranscriptionService` and `QwenVllm` classes to return a boolean based on the service's health endpoint response.
- Enhanced error handling in the health check response to provide more informative status and checks.

* Refactor health check logic and application state management

- Introduced a caching mechanism for health check responses to optimize performance.
- Updated the health check endpoints to utilize a startup timestamp for uptime calculations.
- Enhanced error handling and state management within the FastAPI application for improved reliability.
- Modified the QwenVllm class to initialize an HTTP client for better request handling.

* Refactor health check URL construction in transcription and QwenVllm services

- Updated the `is_ready` meth

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 docs/source
-
+src/bs_translator_backend/data/*.csv
+eval_*.csv
 # From https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
@@ -135,3 +136,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+tests/*.png
