feat: enhance translation service and configuration
- Introduced a new translation agent for improved text translation using OpenAI.
- Updated app configuration to remove optimizer-related fields and added LLM reasoning flag.
- Refactored translation input and configuration models for better structure and clarity.
- Adjusted service dependencies to use dcc_backend_common for consistency.
- Removed deprecated scripts related to dataset preparation and LLM optimization.
- Enhanced streaming response handling in translation routes for better performance.

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,9 @@ OPENAI_API_BASE_URL=http://localhost:${LLM_API_PORT}/v1
 OCR_API_PORT=8005
 OCR_API_BASE_URL=http://localhost:8005/v1
 OPENAI_API_KEY='none'
+LLM_REASONING=False
 LLM_MODEL='ISTA-DASLab/gemma-3-27b-it-GPTQ-4b-128g'
 HMAC_SECRET='your_hmac_secret' # generate with openssl rand 32 | base64
 DOCLING_URL='http://localhost:8004/v1'
 WHISPER_URL='http://localhost:50001/v1'
-OPTIMIZER_API_KEY=
-OPTIMIZER_MODEL=
-OPTIMIZER_API_BASE_URL=
 IS_PROD=False
