Feature/pydantic ai (#31)
* feat: enhance translation service and configuration

- Introduced a new translation agent for improved text translation using OpenAI.
- Updated app configuration to remove optimizer-related fields and added LLM reasoning flag.
- Refactored translation input and configuration models for better structure and clarity.
- Adjusted service dependencies to use dcc_backend_common for consistency.
- Removed deprecated scripts related to dataset preparation and LLM optimization.
- Enhanced streaming response handling in translation routes for better performance.

* chore: update Makefile and README for translation service enhancements

- Replaced pyrefly with ty for static type checking in the Makefile.
- Updated README to reflect the change in LLM orchestration from DSPy to Pydantic AI.
- Added LLM reasoning flag to the configuration section in README.
- Removed references to DSPy optimization scripts and clarified usage notes.

* remove temp json file

* remove unused dspy_config files

- Deleted the dspy_config module files: __init__.py, dataset_loader.py, translation_module.pkl, and translation_program.py as they are no longer needed for the translation service.

* refactor: streamline translation models and documentation

- Removed unnecessary docstrings from TranslationConfig, TranslationInput, and translation route methods for clarity.
- Updated README to reflect the removal of the dspy_config module and its files, simplifying the project structure.
- Enhanced translation service methods with concise comments for improved readability.

* refactor: update translation service tests and remove unused files

- Replaced the deprecated StubTranslationModule with a mock implementation in translation_service_test.py for improved test reliability.
- Enhanced translation_service fixture to mock the translation agent, avoiding dependencies on external services.
- Deleted test_swiss_german_stream_listener.py as it was no longer needed.
- Added new unit 

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ classifiers = [
 ]
 dependencies = [
     "dependency-injector>=4.48.1",
-    "dspy>=3.0.4",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
     "langdetect>=1.0.9",
@@ -29,7 +28,8 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "returns>=0.26.0",
     "structlog>=25.1.0",
-    "backend-common[fastapi]",
+    "pydantic-ai>=1.40.0",
+    "dcc-backend-common>=0.0.1",
 ]
 
 [project.urls]
@@ -49,11 +49,6 @@ dev = [
     "pytest-asyncio>=1.1.0",
     "ty>=0.0.8",
 ]
-
-
-[project.scripts]
-optimize-translation = "bs_translator_backend.scripts.optimize_llm:main"
-prepare-dataset = "bs_translator_backend.scripts.prepare_dataset:main"
 
 
 [build-system]
@@ -163,6 +158,3 @@ allow_untyped_globals = false
 # Package configuration
 namespace_packages = true
 explicit_package_bases = true
-
-[tool.uv.sources]
-backend-common = { git = "https://github.com/DCC-BS/backend-common" }
