--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bs-translator-backend"
-version = "0.2.2"
+version = "0.2.8"
 authors = [{name = "Data Competence Center Basel-Stadt", email = "dcc@bs.ch" },{ name = "Tobias Bollinger", email = "tobias.bollinger@bs.ch" }]
 readme = "README.md"
 keywords = ['python']
@@ -21,7 +21,6 @@ dependencies = [
     "dependency-injector>=4.48.1",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
-    "langdetect>=1.0.9",
     "datasets>=3.1.0",
     "openai>=1.97.0",
     "jiwer>=4.0.0",
@@ -30,6 +29,7 @@ dependencies = [
     "structlog>=25.1.0",
     "pydantic-ai>=1.40.0",
     "dcc-backend-common>=0.0.1",
+    "fast-langdetect>=1.0.0",
 ]
 
 [project.urls]
@@ -119,42 +119,3 @@ line-ending = "auto"
 # Group imports by type (standard library, third-party, first-party).
 combine-as-imports = true
 force-wrap-aliases = true
-
-[tool.mypy]
-# Enable returns plugin
-plugins = ["returns.contrib.mypy.returns_plugin"]
-# Python version
-python_version = "3.13"
-# Path to look for imports
-mypy_path = ["src"]
-# Strict mode - catches more bugs but can be stricter
-strict = true
-# Disallow dynamic typing
-disallow_any_unimported = false
-disallow_subclassing_any = false
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-# None and Optional handling
-no_implicit_optional = true
-strict_optional = true
-# Warnings as errors
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_return_any = true
-warn_unreachable = true
-# Error messages
-pretty = true
-show_column_numbers = true
-show_error_context = true
-# Advanced
-exclude = ["tests/", "venv/", ".venv/"]
-implicit_reexport = false
-# Allow for untyped implementations in specific cases
-allow_untyped_globals = false
-# Package configuration
-namespace_packages = true
-explicit_package_bases = true
